# pm-app

./: .gitignore  JOURNAL.md  MCP.md  README.md  TESTING.md  config.yaml.example  pyproject.toml  requirements.txt
.streamlit/: config.toml
pm/: __main__.py
pm/cli/: commands.py
pm/core/: backup.py  journal.py  journal_manager.py  manager.py  storage.py  task.py
pm/mcp/: serializers.py  server.py
pm/mcp/tools/: __init__.py  journal_tools.py  query_tools.py  sync_helper.py  task_tools.py
pm/scripts/: __init__.py  migrate_to_journal.py
pm/utils/: config.py
pm/web/: __init__.py  app.py  data_loader.py
pm/web/components/: __init__.py  day_section.py  summary_view.py  week_selector.py
service/: pm-web.service
tests/: conftest.py  test_config.py  test_manager.py  test_storage.py  test_task.py
tests/mcp/: conftest.py  test_journal_tools.py  test_query_tools.py  test_serializers.py  test_sync_helper.py  test_task_tools.py
tests/web/: conftest.py  test_data_loader.py
